--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bin Solmoon (BSM)</title>
+
   <style>
     body {
       margin: 0;
       font-family: sans-serif;
-      background: url('background.png') no-repeat center center fixed;
+      background: url('Background.png') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
+    }
+
+    #loader {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: black;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      z-index: 9999;
     }
 
     .logo {
@@ -40,12 +54,43 @@
       text-decoration: none;
       color: black;
     }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      .buy-button {
+        width: 80%;
+        padding: 12px;
+        font-size: 1rem;
+      }
+
+      .logo {
+        width: 100px;
+      }
+    }
   </style>
 </head>
+
 <body>
+  <div id="loader">🚀 Loading...</div>
+
   <img src="logo.png" class="logo" />
   <h1>To the Moon... from Riyadh</h1>
   <p>من الریاض الی القمر</p>
   <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2Z6pJYSBdNYFuueMvNvGGqMBaCFRmW9z9NiiAmyzt4g9" class="buy-button" target="_blank">Buy BSM</a>
+
+
+  <script>
+    window.addEventListener("load", () => {
+      const loader = document.getElementById("loader");
+      loader.style.display = "none";
+    });
+  </script>
 </body>
 </html>
