--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       background-size: cover;
       color: white;
       text-align: center;
+    }
+    <body>
        <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2Z6pJYSBdNYFuueMvNvGGqMBaCFRmW9z9NiiAmyzt4g9" class="buy-button" target="_blank">Buy BSM</a>
 
-    }
+    
 
     #loader {
       position: fixed;
@@ -84,7 +86,8 @@
 
   <img src="logo.png" class="logo" />
   
- 
+  <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2Z6pJYSBdNYFuueMvNvGGqMBaCFRmW9z9NiiAmyzt4g9" class="buy-button" target="_blank">Buy BSM</a>
+
 
   <script>
     window.addEventListener("load", () => {
