--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
 <body>
   <div id="loader">🚀 Loading...</div>
 
-
+<div class="but-footer">
   <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2Z6pJYSBdNYFuueMvNvGGqMBaCFRmW9z9NiiAmyzt4g9" class="buy-button" target="_blank">Buy BSM</a>
-
+</div>
+</body>
   <script>
     window.addEventListener("load", () => {
       const loader = document.getElementById("loader");
