--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       align-items: center;
       font-size: 2rem;
       z-index: 9999;
+      .buy-footer{
+        position: fixed;
+        bottom: 20px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     /* Main Styles */
