--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <div id="loader">🚀 Loading...</div>
 
-<div class="but-footer">
+<div class="buy-footer">
   <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2Z6pJYSBdNYFuueMvNvGGqMBaCFRmW9z9NiiAmyzt4g9" class="buy-button" target="_blank">Buy BSM</a>
 </div>
 </body>
