--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       text-decoration: none;
       color: black;
       display: inline-block;
+      margin-top: 20px;
       margin-bottom: 40px;
     }
 
